@startuml PRM_ERD
!theme plain
skinparam backgroundColor #FFFFFF
skinparam entity {
  BackgroundColor #F8F9FA
  BorderColor     #495057
  FontColor       #212529
}
skinparam arrow {
  Color           #495057
  FontColor       #495057
  FontSize        11
}
title PRM Tool — Database ERD (MariaDB / utf8mb4_unicode_ci)

' ─────────────────────────────────────────────
' TABLES
' ─────────────────────────────────────────────

entity "roles" as ROLES {
  * role_id    : INT AUTO_INCREMENT <<PK>>
  --
  * role_name  : VARCHAR(50) <<UNIQUE>>
  note: 'ADMIN' | 'MANAGER' | 'RESOURCE'
}

entity "permissions" as PERMS {
  * permission_id   : INT AUTO_INCREMENT <<PK>>
  --
  * permission_name : VARCHAR(100) <<UNIQUE>>
}

entity "role_permissions" as RPERMS {
  * role_id       : INT <<PK, FK → roles.role_id>>
  * permission_id : INT <<PK, FK → permissions.permission_id>>
  --
    expires_at    : DATETIME <<NULLABLE>>
  note: NULL = permanent grant
}

entity "users" as USERS {
  * user_id             : INT AUTO_INCREMENT <<PK>>
  --
  * full_name           : VARCHAR(100)
  * email               : VARCHAR(100) <<UNIQUE>>
  * username            : VARCHAR(50)  <<UNIQUE>>
  * password_hash       : VARCHAR(255)
  * role_id             : INT      <<FK → roles.role_id>>
  * is_active           : TINYINT(1) DEFAULT 1
  * is_frozen           : TINYINT(1) DEFAULT 0
  * password_expires_at : DATETIME DEFAULT CURRENT_TIMESTAMP
  * created_at          : DATETIME DEFAULT CURRENT_TIMESTAMP
  note: is_frozen set by NotificationService after 2 missed reminders
}

entity "user_profile" as RPROF {
  * user_id     : INT          <<PK, FK → users.user_id>>
  --
    manager_id  : INT          <<FK → users.user_id | NULLABLE>>
  * department  : VARCHAR(100)
  * designation : VARCHAR(100)
  note: ALL roles — ADMIN defaults (Administration/Administrator),\nMANAGER defaults dept to Management,\nRESOURCE chooses both
}

entity "resource_status" as RSTATUS {
  * user_id : INT <<PK, FK → users.user_id>>
  --
  * status  : ENUM('BENCH','ALLOCATED') DEFAULT 'BENCH'
  note: RESOURCE rows only
}

entity "user_skills" as SKILLS {
  * skill_id      : INT AUTO_INCREMENT <<PK>>
  --
  * user_id       : INT  <<FK → users.user_id>>
  * skill_name    : VARCHAR(100)
  * category      : ENUM('Backend','Frontend','DevOps','QA','Other')
  * proficiency   : ENUM('Beginner','Intermediate','Advanced')
}

entity "projects" as PROJ {
  * project_id   : INT AUTO_INCREMENT <<PK>>
  --
  * name         : VARCHAR(200)
    description  : TEXT
  * start_date   : DATE
  * end_date     : DATE
  * status       : ENUM('PLANNED','ACTIVE','ON_HOLD') DEFAULT 'PLANNED'
  * manager_id   : INT  <<FK → users.user_id>>
  * health       : ENUM('ON_TRACK','ATTENTION','AT_RISK') DEFAULT 'ON_TRACK'
}

entity "milestones" as MILE {
  * milestone_id  : INT AUTO_INCREMENT <<PK>>
  --
  * project_id    : INT  <<FK → projects.project_id>>
  * title         : VARCHAR(200)
  * due_date      : DATE
  * status        : ENUM('NOT_STARTED','IN_PROGRESS','DONE') DEFAULT 'NOT_STARTED'
}

entity "allocations" as ALLOC {
  * allocation_id : INT AUTO_INCREMENT <<PK>>
  --
  * user_id       : INT  <<FK → users.user_id>>
  * project_id    : INT  <<FK → projects.project_id>>
  * utilisation   : INT  CHECK (1-100)
  * from_date     : DATE
  * to_date       : DATE
  * is_active     : TINYINT(1) DEFAULT 1
}

entity "timesheets" as TS {
  * timesheet_id  : INT AUTO_INCREMENT <<PK>>
  --
  * user_id       : INT  <<FK → users.user_id>>
  * week_start    : DATE <<UNIQUE with user_id>>
  * status        : ENUM('SUBMITTED','MISSED')
    submitted_at  : DATETIME
}

entity "timesheet_entries" as TSE {
  * entry_id       : INT AUTO_INCREMENT <<PK>>
  --
  * timesheet_id   : INT  <<FK → timesheets.timesheet_id>>
  * project_id     : INT  <<FK → projects.project_id>>
  * hours          : INT  CHECK (1-168)
    activity_tags  : TEXT
}

entity "timesheet_reminder_log" as REMLOG {
  * id                : INT AUTO_INCREMENT <<PK>>
  --
  * user_id           : INT      <<FK → users.user_id>>
  * week_start        : DATE
    reminder1_sent_at : DATETIME <<NULLABLE>>
    reminder2_sent_at : DATETIME <<NULLABLE>>
    frozen_at         : DATETIME <<NULLABLE>>
  note: one row per (user_id, week_start) pair
}

entity "system_config" as CFG {
  * config_key    : VARCHAR(50) <<PK>>
  --
  * config_value  : TEXT
}

' ─────────────────────────────────────────────
' NOTES
' ─────────────────────────────────────────────

note top of ROLES
  Seeded at startup:
  1 = ADMIN | 2 = MANAGER | 3 = RESOURCE
  Role checks enforced in RoleGuard on every
  authenticated API request.
end note

note top of PERMS
  Seeded at startup. Static list:
  CHANGE_PASSWORD, MANAGE_USERS, MANAGE_PROFILES,
  MANAGE_PROJECTS, MANAGE_SKILLS, ALLOCATE_RESOURCES,
  SUBMIT_TIMESHEET, VIEW_TEAM_TIMESHEETS,
  MANAGE_CONFIG, USE_AI_FEATURES
end note

note top of RPERMS
  Seeded at startup; runtime-editable by ADMIN.
  expires_at NULL = permanent grant.
  expires_at set = time-limited grant.
  NOTE: Enforced by PermissionGuard on every request.
  PermissionGuard::require / requireAny replaces RoleGuard role checks in all controllers.
end note

note top of USERS
  Pure identity table — no role-specific fields.
  password_expires_at = NOW() on create (forces password change on first login).
  password_expires_at = NOW()+3mo after password change.
  is_frozen = 1 locks timesheet submission; set by NotificationService
  after 2 missed-week reminders. Manager can restore via API.
  All roles present here; ADMIN has no profile/status rows.
end note

note right of RPROF
  One row per user (ALL roles).
  ADMIN: department=Administration, designation=Administrator.
  MANAGER: designation chosen, department=Management.
  RESOURCE: both chosen at creation time.
  manager_id is self-referential via users.user_id.
  manager_id NULL = top-level (no one above).
end note

note right of RSTATUS
  One row per RESOURCE only.
  MANAGER and ADMIN have no row here.
  status recomputed by SchedulerService
  based on active allocations.
end note

note right of PROJ
  health recomputed by SchedulerService based on
  milestone due dates and timesheet submission rates.
  manager_id references users where role = MANAGER.
end note

note right of ALLOC
  utilisation = % of working time on this project.
  Sum across active allocations must not exceed 100%.
  is_active = false when ended early or past to_date.
end note

note bottom of CFG
  Keys: llm_provider, llm_api_key,
  scheduler_interval_hours, max_weekly_hours
end note

' ─────────────────────────────────────────────
' RELATIONSHIPS
' ─────────────────────────────────────────────

' roles → users (one role, many users)
ROLES    ||--|{   USERS    : "1 role\n→ 1..* users"

' roles ↔ permissions via role_permissions
ROLES    ||--o{   RPERMS   : "1 role\n→ 0..* grants"
PERMS    ||--o{   RPERMS   : "1 permission\n→ 0..* grants"

' users → user_profile (ALL roles)
USERS    ||--|{   RPROF    : "1 user\n→ 1 profile"

' user_profile self-ref via users (manager_id)
USERS    ||--o{   RPROF    : "1 manager\n→ 0..* reports"

' users → resource_status (RESOURCE only)
USERS    ||--o|   RSTATUS  : "1 user\n→ 0..1 status"

' users → skills
USERS    ||--o{   SKILLS   : "1 user\n→ 0..* skills"

' users (MANAGER) → projects
USERS    ||--o{   PROJ     : "1 manager\n→ 0..* projects"

' users → allocations
USERS    ||--o{   ALLOC    : "1 user\n→ 0..* allocations"

' users → timesheets
USERS    ||--o{   TS       : "1 user\n→ 0..* timesheets"

' project relationships
PROJ     ||--o{   ALLOC    : "1 project\n→ 0..* allocations"
PROJ     ||--o{   MILE     : "1 project\n→ 0..* milestones"
PROJ     ||--o{   TSE      : "1 project\n→ 0..* entries"

' timesheet → entries
TS       ||--|{   TSE      : "1 timesheet\n→ 1..* entries"

' users → timesheet_reminder_log
USERS    ||--o{   REMLOG   : "1 user\n→ 0..* reminder logs"

@enduml
